# osiris-query-2

./: .gitignore  environment.data_analysis.yml  environment.min.yml  environment.yml  pyproject.toml  readme.md
config/: config.default.toml
definitions/reference/: all_column_names.sql  all_columns.sql  all_tables.sql  all_views.sql  column_stats.sql  nls_database_parameters.sql  nls_session_parameters.sql  table.sql  table_stats.sql
definitions/sanity/: last_mutation.sql
definitions/utils/: agg.sql  cte.sql  wrapper.sql
definitions/utils/agg/: block.assert.sql  block.group_by.sql  block.order_by.sql  macro.colnames.jinja  macro.values.jinja
definitions/utils/cte/: macro.order_by.jinja  macro.select.jinja  macro.where.jinja
query/: __init__.py  aggspec.py  config.py  connection.py  definition.py  execution.py  key.py  osiris.py  pivot.py  query.py  report.py  utils.py  xquery.py
query/connections/: connection.py  csa.py  isis.py  osiris.py  sap.py
schema/: osiris.json
scripts/: run_task.py  run_task.sh
tests/: test_aggspec.py
utils/: tasks.py
