[project]
name = "osiris-query-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    "oracledb",
    "pandas",
    "jinja2",
    "sqlparse",
    "lxml",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["query"]